--- a/lib/generators/solid_queue_autoscaler/templates/create_solid_queue_autoscaler_state.rb.erb
+++ b/lib/generators/solid_queue_autoscaler/templates/create_solid_queue_autoscaler_state.rb.erb
@@ -1,6 +1,15 @@
 # frozen_string_literal: true
 
 class CreateSolidQueueAutoscalerState < ActiveRecord::Migration<%= migration_version %>
+  # Use the same database connection as SolidQueue for multi-database setups
+  def self.connection
+    if defined?(SolidQueue::Record) && SolidQueue::Record.respond_to?(:connection)
+      SolidQueue::Record.connection
+    else
+      super
+    end
+  end
+
   def change
     create_table :solid_queue_autoscaler_state do |t|
       t.string :key, null: false
